# autonomous-content-agent

./: .gitignore  README.md
backend/: .env.example  README.md  graph.mmd  pyproject.toml
backend/src/: __init__.py  config.py  main.py  schemas.py
backend/src/autonomous_content_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/models/: __init__.py
backend/src/review/: __init__.py  rules.py
backend/src/services/: browser_operator.py  event_bus.py  model_clients.py
backend/src/utils/: image_utils.py  json_utils.py
backend/src/workflow/: graph.py  routing.py  state.py
backend/tests/: test_event_bus.py  test_json_utils.py  test_review_rules.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/replay/: page.tsx
frontend/lib/: types.ts
scripts/: run-dev.ps1
